Update serverless deployment and sns handler

--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate:keys": "openssl genrsa -out ./keys/private.pem 2048 && openssl rsa -in ./keys/private.pem -pubout -out ./keys/public.pem"
+    "generate:keys": "openssl genrsa -out ./keys/private.pem 2048 && openssl rsa -in ./keys/private.pem -pubout -out ./keys/public.pem",
+    "deploy": "serverless deploy --aws-profile $AWS_PROFILE"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "openpgp": "^4.7.2"
+  },
+  "devDependencies": {
+    "serverless": "^1.61.2"
   }
 }
