--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:keys": "openssl genrsa -out ./keys/private.pem 2048 && openssl rsa -in ./keys/private.pem -pubout -out ./keys/public.pem",
-    "deploy": "serverless deploy --aws-profile $AWS_PROFILE"
+    "deploy": "serverless deploy --aws-profile $AWS_PROFILE",
+    "remove-deploy": "serverless remove --aws-profile $AWS_PROFILE"
   },
   "author": "",
   "license": "ISC",
