Update serverless version and lock framework ver

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@
 #    docs.serverless.com
 
 service: aws-2fa-proxy
-frameworkVersion: ">=1.1.0"
+frameworkVersion: "=1.67.0"
 custom: ${file(./config.yml)}
 
 provider:
